Completed Holy Grail layout Struggled with aligning list left 0 padding and margin in the ul solved

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -13,6 +13,7 @@ body {
   color: white;
   font-size: 32px;
   font-weight: 900;
+  display: flex;
   justify-content: flex-start;
   align-items: center;
   padding-left: 16px;
@@ -21,20 +22,57 @@ body {
 .footer {
   height: 72px;
   background: #eee;
-  color: darkmagenta; 
-  align-self: flex-end;;
- }
+  color: darkmagenta;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.middle {
+  display:flex;
+  flex-direction: row;
+  flex: 1;
+}
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
-  flex: 1;
+  flex-shrink: 0;
+  font-size: 24px;
+  padding: 16px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 32px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  flex: 1;
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 300px;
+  padding: 16px;
+  margin: 16px;
 }
